--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <commons-lang3.version>3.7</commons-lang3.version>
         <servlet.version>4.0.0</servlet.version>
         <spring-boot.version>1.5.10.RELEASE</spring-boot.version>
+        <spring-cloud.version>1.3.1.RELEASE</spring-cloud.version>
     </properties>
 
     <dependencies>
@@ -81,6 +82,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
             <version>${spring-boot.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-autoconfigure -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>${spring-boot.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons</artifactId>
+            <version>${spring-cloud.version}</version>
             <scope>provided</scope>
         </dependency>
 
